# PortHawk

./: .dependencies.json  requirements.txt
docs/: requirement.txt
docs/prd/: 20260609112638.json
docs/system_design/: 20260609112638.json
docs/task/: 20260609112638.json
port_sentry/: README.md  pyproject.toml
port_sentry/port_sentry/: __init__.py  __main__.py  cli.py  monitor.py  ui.py  utils.py
resources/competitive_analysis/: 20260609112638.mmd
resources/data_api_design/: 20260609112638.mmd
resources/prd/: 20260609112638.md
resources/seq_flow/: 20260609112638.mmd
resources/system_design/: 20260609112638.md
